Update Dashboard: add live notifications panel, Catalog: improve course view